--- a/index.html
+++ b/index.html
@@ -6,6 +6,28 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <form class="input-wrapper" onsubmit="return handleSubmit(event)">
+        <input 
+        class="input-style"
+        type="text" 
+        placeholder="Enter your phone number" 
+        id="phoneNumber"
+        />
+  
+        <button
+        class="btn-style"
+         type="submit">
+          Enter
+        </button>
+  
+      <h2 class="provider-style" id="provider"></h2>
+  
+      </form>
+  
+  
+
+    <script>
+
+    </script>
 </body>
 </html>
